# pynntp

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  index.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: check.yml  inn2.yml  mypy.yml  publish.yml  python-package.yml  sphinx.yml
docs/: conf.py
nntp/: __init__.py  date.py  fifo.py  headerdict.py  iodict.py  nntp.py  polyfill.py  types.py  utils.py  yenc.py
src/: date.py  fifo.py  iodict.py  nntp.py  stringbuffer.py  tz.py
tests/: test_headerdict.py  test_inn2.py  test_utils.py  test_yenc.py
tests/fixtures/: yenc1.encoded
tests/integration/inn2/: test_inn2.py
