[tool.poetry]
name = "pynntp"
version = "1.0.4"
description = "NNTP Library (including compressed headers)"
authors = ["Byron Platt <byron.platt@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "nntp" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Usenet News",
]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.3"
pre-commit = "^3.8.0"
mypy = "^1.11.2"
pytest-benchmark = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
  "AIR",    # Airflow
  "ASYNC",  # flake8-async
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "C90",    # McCabe cyclomatic complexity
  "DJ",     # flake8-django
  "E",      # pycodestyle
  "F",      # Pyflakes
  "FURB",   # refurb
  "G",      # flake8-logging-format
  "ICN",    # flake8-import-conventions
  "INT",    # flake8-gettext
  "ISC",    # flake8-implicit-str-concat
  "LOG",    # flake8-logging
  "NPY",    # NumPy-specific rules
  "PD",     # pandas-vet
  "PERF",   # Perflint
  "PT",     # flake8-pytest-style
  "Q",      # flake8-quotes
  "S",      # flake8-bandit
  "SLF",    # flake8-self
  "SLOT",   # flake8-slots
  "T10",    # flake8-debugger
  "TCH",    # flake8-type-checking
  "TID",    # flake8-tidy-imports
  "W",      # pycodestyle
  "YTT",    # flake8-2020
  # "A",    # flake8-builtins
  # "ANN",  # flake8-annotations
  # "ARG",  # flake8-unused-arguments
  # "B",    # flake8-bugbear
  # "COM",  # flake8-commas
  # "CPY",  # flake8-copyright
  # "D",    # pydocstyle
  # "DOC",  # pydoclint
  # "DTZ",  # flake8-datetimez
  # "EM",   # flake8-errmsg
  # "ERA",  # eradicate
  # "EXE",  # flake8-executable
  # "FA",   # flake8-future-annotations
  # "FAST", # FastAPI
  # "FBT",  # flake8-boolean-trap
  # "FIX",  # flake8-fixme
  # "FLY",  # flynt
  # "I",    # isort
  # "INP",  # flake8-no-pep420
  # "N",    # pep8-naming
  # "PGH",  # pygrep-hooks
  # "PIE",  # flake8-pie
  # "PL",   # Pylint
  # "PTH",  # flake8-use-pathlib
  # "PYI",  # flake8-pyi
  # "RET",  # flake8-return
  # "RSE",  # flake8-raise
  # "RUF",  # Ruff-specific rules
  # "SIM",  # flake8-simplify
  # "T20",  # flake8-print
  # "TD",   # flake8-todos
  # "TRY",  # tryceratops
  # "UP",   # pyupgrade
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
